[package]
name = "xiao-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["defmt", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0.0"
fixed = "1.28.0"
fixed-macro = "1.2.0"
panic-probe = "0.3.2"
pio = "0.2.1"
smart-leds = "0.4.0"
